Add video, images and icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
             <h1>Discover hidden places in the world around you</h1>
         </header> 
         <h4>Download Excursion (Coming Soon!)</h4>
+        <main>
+            
+            <section class="hero-background">
+                <video autoplay muted loop>
+                    <source src="resources/video/excursion.mp4" type="video/mp4">
+                    <!--<source src="movie.ogg" type="video/ogg"> -->
+                    Your browser does not support the video tag.
+                  </video>
+            </section>
 
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <div class="tent-outside">
+            <img src="resources/images/camp.webp" alt="tent-outside">
+            <img src="resources/images/phone.webp" alt="phone-icon">
+            </div>
+            <h2>Coming Soon for iPhone and Android </h2>
+            <h4>Download Excursion (Coming Soon!)</h4>
+        </main>
         
     </body>
 </html>
