--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
     <html>
 
     <head>
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/codecademy/git/excursion/resources/css/style.css" type="text/css">
+        <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     </head>
 
     <body>
